--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "start:prod": "node ./bin/www"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -12,6 +13,7 @@
     "express": "^4.16.4",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.4",
-    "pm2": "^4.4.0"
+    "pm2": "^4.4.0",
+    "shelljs": "^0.8.4"
   }
 }
